--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require '../../../vendor/assets/stylesheets/bootstrap.min.css'
+ *= require '../../../vendor/assets/stylesheets/bootstrap-theme.min.css'
+ *= require_tree ./modules
  */
