--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<%= yield %>
+  <%= render :partial => 'layouts/navbar' %>
+  <div style="height: 60px; width: 500px"></div>
+  <%= yield %>
 
 </body>
 </html>
