--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -30,7 +30,7 @@
                   - for project in Project.order('name')
                     .checkbox
                       %label
-                        = check_box_tag 'user[project_ids][]', project.id, current_user.project_ids.include?(project.id)
+                        = check_box_tag 'user[project_ids][]', project.id, @user.project_ids.include?(project.id)
                         = project.name
               .form-group
                 .col-sm-8.col-sm-offset-4
